# garden

./: .gitignore  Cargo.toml  editor_or_not.md  example.expr  example.expr.nodecache  example.expr.value  language.md  readme.md  readme.tdsl  repomix.config.json  setup.sh  stability.md  test.expr  test.expr.nodecache  test.expr.value  test.py  tree_sitter.md  values.ron
examples/: clear.sh  example.expr  http.expr  one.expr
ideas/: annotations.md  cachekey.md  calls. Md  cli.md  dreamux.md  dx.md  editor_or_not.md  examples_over_types.md  integration.md  langauge.md  language.md  literals.md  mvp.md  polyglot.md  runtimeedittime.md  spike.tdsl  targetux.md  tree.md
ideas/editor/: expression.md  graph.md  projectional.md
plans/: cli.md  refactor.md
src/: expr.pest  main.rs  nrepl.rs  parser.rs  tui.rs
