[package]
name = "garden"
version = "0.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Removed ron for now
# Add TUI deps
ratatui = { version = "0.26", features = ["all-widgets"] } # Use a specific version
crossterm = "0.27"
notify = "6.1"
indexmap = "2.2" # For ordered context display

