[package]
name = "garden"
version = "0.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.2" # For ordered context display
tokio = { version = "1", features = ["full"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
uuid = { version = "1", features = ["v4"] }
bytes = "1" # Added for buffer management