[package]
name = "garden"
version = "0.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.2" # For ordered context display
tokio = { version = "1", features = ["full"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
uuid = { version = "1", features = ["v4"] }
bytes = "1" # Added for buffer management
futures = "0.3" # For BoxFuture
notify = "8.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
blake3 = "1.8.2"
hex = "0.4.3"
pest = "2.7"
pest_derive = "2.7"
